--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "algorithm"
+name = "rust-algorithm"
 version = "0.1.0"
-authors = ["wowo <zhouyuexie@gmail.com>"]
+authors = ["quietboy <zhouyuexie@gmail.com>"]
 
 [dependencies]
 time = "*"
